--- a/frontend/teamplates/pagemode.html
+++ b/frontend/teamplates/pagemode.html
@@ -9,8 +9,8 @@
 <body>
     <p class="title">Choisir son mode</p>
     <div>
-        <button class="button1">Mode Conducteur</button>
-        <button class="button2">Mode Passager</button>
+        <button class="button1" onclick="window.location.href='conducteur.html'">Mode Conducteur</button>
+        <button class="button2" onclick="window.location.href='passager.html'">Mode Passager</button>
     </div>
 </body>
 </html>
