--- a/frontend/teamplates/menu.html
+++ b/frontend/teamplates/menu.html
@@ -4,31 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="menu.css">
+    <script>
+        function toggleMenu() {
+            var menu = document.getElementById('menuContent');
+            menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+        }
+        
+        function showSection(sectionId) {
+            document.querySelectorAll('.section').forEach(section => {
+                section.style.display = 'none';
+            });
+            document.getElementById(sectionId).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
     <button class="menu" onclick="toggleMenu()">&#9776;</button>
-    <div class="menu-content" id="menuContent">
-        <a href="#" onclick="showSection('messages')">Messages</a>
-        <a href="#" onclick="showSection('assistance')">Assistance</a>
-        <a href="#" onclick="showSection('historique')">Historique</a>
-        <a href="#" onclick="showSection('compte')">Compte</a>
+    <div class="menu-dropdown" id="menuContent" style="display: none; flex-direction: column;">
+        <button class="tab" onclick="showSection('profil')">Profil</button>
+        <button class="tab" onclick="showSection('messages')">Messages</button>
+        <button class="tab" onclick="showSection('historique')">Historique</button>
+        <button class="tab" onclick="showSection('assistance')">Assistance</button>
     </div>
-    <div id="messages" class="section">
-        <h2>Messages</h2>
-        <p id="messageContent">Vous n'avez entamé encore aucune conversation.</p>
-    </div>
-    <div id="assistance" class="section">
-        <h2>Assistance</h2>
-        <p>Contact : support@example.com</p>
-        <p><a href="https://forum.example.com">Accéder au forum</a></p>
-    </div>
-    <div id="historique" class="section">
-        <h2>Historique</h2>
-        <ul id="historiqueList"></ul>
-    </div>
-    <div id="compte" class="section">
-        <h2>Compte</h2>
+    
+    <div id="profil" class="section" style="display: none;">
+        <h2>Profil</h2>
         <div class="profile">
             <img src="profile.jpg" alt="Photo de profil" width="100">
             <p>Nom: Dupont</p>
@@ -37,6 +38,20 @@
             <p>Téléphone: 0606060606</p>
             <p>Adresse: 123 rue de Paris</p>
         </div>
+    </div>
+    <div id="messages" class="section" style="display: none;">
+        <h2>Messages</h2>
+        <p id="messageContent">Vous n'avez entamé encore aucune conversation.</p>
+    </div>
+    <div id="historique" class="section" style="display: none;">
+        <h2>Historique</h2>
+        <p id="historiqueContent">Vous n'avez encore effectué aucun trajet.</p>
+        <ul id="historiqueList"></ul>
+    </div>
+    <div id="assistance" class="section">
+        <h2>Assistance</h2>
+        <p>Contact : support@example.com</p>
+        <p><a href="https://forum.example.com">Accéder au forum</a></p>
     </div>
     <script src="script.js"></script>
 </body>
